<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityCocktail" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/Icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@color/White"
            android:contentDescription="@string/image"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/cocktail_icon_lol" />

        <TextView
            android:id="@+id/cocktail_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/Icon"
            android:text="Cocktail Name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/cocktail_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/cocktail_header"
            android:layout_below="@+id/cocktail_header"
            android:text="Beschreibung"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ListView
            android:id="@+id/Cocktail_ListView"
            android:layout_width="wrap_content"
            android:layout_height="300sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/Icon" >
        </ListView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/cocktail_desc"
            android:layout_below="@+id/cocktail_desc"
            android:text="Enthaltene Getränke:"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/relativeLayout1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/cocktail_newSaft"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_MakeNew" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/cocktail_graph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Graph anzeigen" />

            <Button
                android:id="@+id/Cocktail_btnOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_order"
                android:visibility="visible" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>