<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddUserActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" >

        <TextView
            android:id="@+id/bluetooth_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AddUser"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <Button
            android:id="@+id/user_btnNewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/addUser_back"
            android:onClick="addUser"
            android:text="@string/button_MakeNew" />

        <ImageView
            android:id="@+id/user_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/bluetooth_title"
            android:adjustViewBounds="true"
            android:onClick="takePic"
            android:src="@drawable/male_icon" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/user_pic"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/user_pic"
            android:layout_toRightOf="@+id/user_pic"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radio0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.17"
                android:checked="true"
                android:onClick="onRadioButtonClicked"
                android:text="Männlich" />

            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.24"
                android:onClick="onRadioButtonClicked"
                android:text="Weiblich" />
        </RadioGroup>

        <EditText
            android:id="@+id/user_editTextName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/user_pic"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/user_edittextSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/user_editTextName"
            android:layout_below="@+id/user_editTextName"
            android:ems="10"
            android:hint="Größe"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/user_edittextWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@+id/user_edittextSize"
            android:layout_below="@+id/user_edittextSize"
            android:ems="10"
            android:hint="Gewicht"
            android:inputType="numberDecimal" />

        <DatePicker
            android:id="@+id/datePicker1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/user_edittextWeight"
            android:calendarViewShown="false" />

        <Button
            android:id="@+id/addUser_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:onClick="goBack"
            android:text="@string/button_back" />
    </RelativeLayout>

</RelativeLayout>